# rabbitmq-tutorials

./: README.md
cpp/: CMakeLists.txt  publisher_confirms.cpp
cpp/HelloWorld/: receive.cpp  send.cpp
cpp/PublishSubscribe/: emit_log.cpp  receive_logs.cpp
cpp/RPC/: rpc_client.cpp  rpc_server.cpp
cpp/Routing/: emit_log_direct.cpp  receive_logs_direct.cpp
cpp/Topic/: emit_log_topic.cpp  receive_logs_topic.cpp
cpp/WorkQueues/: new_task.cpp  worker.cpp
cpp/rabbitmq-c/include/: amqp.h  amqp_framing.h  amqp_tcp_socket.h
cpp/rabbitmq-c/include/rabbitmq-c/: amqp.h
cpp/rabbitmq-c/lib/: rabbitmq.4.lib
dotnet/: dotnet.sln
dotnet/EmitLog/: EmitLog.cs
dotnet/EmitLogDirect/: EmitLogDirect.cs  EmitLogDirect.csproj
dotnet/EmitLogTopic/: EmitLogTopic.csproj
dotnet/NewTask/: NewTask.cs  NewTask.csproj
dotnet/RPCClient/: RPCClient.csproj
dotnet/RPCServer/: RPCServer.csproj
dotnet/ReceiveLogs/: ReceiveLogs.cs  ReceiveLogs.csproj
dotnet/ReceiveLogsDirect/: ReceiveLogsDirect.cs
dotnet/ReceiveLogsTopic/: ReceiveLogsTopic.csproj
dotnet/Send/: Send.cs  Send.csproj
dotnet/Worker/: Worker.cs
